# PerformanceEvaluation

./: .gitignore  README.md  pyproject.toml
src/perf_eval/: __init__.py  benchmark.py  cli.py  prompts.py
